Issue #107: wrap long strings

--- a/app/assets/stylesheets/companies.css.sass
+++ b/app/assets/stylesheets/companies.css.sass
@@ -1,7 +1,11 @@
 .profile
   .contacts
     table.list
+      table-layout: fixed
       width: 100%
+      td
+        width: 50%
+        word-wrap: break-word
     .main
       width: 49%
       float: left
